tests/typing/bad/testfile-undefined-4.go
package main

type T struct {}
func main() { t := new(T); t.a = 1 }
